--- a/style.css
+++ b/style.css
@@ -1,131 +1,114 @@
-html{
-    margin: 0px;
-}
-
-
-body{
+html, body {
+    margin: 0;
     font-family: Helvetica, Arial, sans-serif;
-    margin: 0px;
     font-size: 1.5vh;
 }
 
-
-
-body > main  article{
-    width: 80%;
-    margin: auto;
+body {
+    background-color: #f0f0f0;
 }
 
-#main-content{
-    display: flex;
-    justify-content: space-around;
-}
-
-#main-content > div{
-    width: 70%;
-}
-
-#main-header{
-    background-color: orange;
+#main-header {
+    background-color: #000; 
     display: flex;
     height: 8vh;
     align-items: center;
     justify-content: space-around;
 }
 
-#nav-ul{
+#logo {
+    color: white;
+    font-family: "Fredoka One", sans-serif;
+    text-shadow: 1px 1px 0px black, -1px 1px 0px black, 1px -1px 0px black, -1px -1px 0px black;
+}
+
+#nav-ul {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-#nav-ul >li{
+#nav-ul > li {
     padding: 8px;
     margin: 16px;
 }
 
-
-
-body > header > nav > ul{
+body > header > nav > ul {
     list-style: none;
-    text-decoration: none;
 }
 
-
-.navbutton{
-    color: rgb(255, 255, 255);
+.navbutton {
+    color: #fff;
     text-decoration: none;
     padding: 6px 15px;
     border: 1px solid white;
-    border-radius: 20px; 
+    border-radius: 20px;
 }
 
-.navbutton:hover, :active{
-    background-color: white;
-    color: black;
-}
-
-#logo{
+.navbutton:hover, .navbutton:active {
+    background-color: #f00; 
     color: white;
-    margin: 0px;
-    padding: 8px;
-    font-family: "Fredoka One", sans-serif;
-    text-shadow: 1px 1px 0px black, -1px 1px 0px black, 1px -1px 0px black, -1px -1px 0px black;
-
 }
 
-h1{
-    margin: 0px;
-    padding: 8px;
+#main-content {
+    display: flex;
+    justify-content: space-around;
 }
 
-h2{
+#main-content > div {
+    width: 70%;
+}
+
+aside {
+    width: 20%;
+}
+
+article {
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+article header h2, article header h3 {
+    color: #f00; 
     text-align: center;
 }
 
-cite > a {
-    display: inline-block;
-    width: 100px;
-    height: 50px;
+footer {
+    background-color: #000;
+    color: white;
+    padding: 20px;
+    text-align: center;
 }
 
-ul{
-    margin: 0px;
-}
-
-body>footer{
-    background-color: orange;
+#footer-ul {
     display: flex;
-}
-
-#footer-ul{
-    display: flex;
+    justify-content: space-between;
     list-style: none;
 }
 
-#footer-ul > div > li{
+#footer-ul li {
     margin-left: 12px;
 }
 
-#footer-ul>div>li>a{
+#footer-ul li a {
     color: white;
     text-decoration: none;
 }
 
-img{
-    border-radius: 100%;
-}
-/* Center the form */
 form {
-    width: 50%; /* Adjust the width of the form as needed */
-    margin: 0 auto; /* Centers the form horizontally */
-    padding: 20px; /* Optional: Adds padding around the form */
-    background-color: #f5f5f5; /* Optional: Adds a background color for better visibility */
-    border-radius: 8px; /* Optional: Adds rounded corners */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow for effect */
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-img{
+img {
     height: 250px;
     width: 250px;
+    border-radius: 50%;
 }
